<resources>
    <string name="app_name">Logic Brothers &amp; Company</string>
    <string name="logic_brothers_company"><![CDATA[LOGIC BROTHERS & COMPANY]]></string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logic_string_first"><![CDATA[LOGIC BROTHERS & COMPANY was created with a vision of providing innovative products to the society by using the latest technology and applying strict quality control procedures. Our aim is not to compete but to commit for quality assurance for the life long product range to meet the customer needs. We have become a pioneer in industries by inventing the World\'s first ever Sensor less Liquid level controller. Apart from this, our team is constantly engaged in experimenting and researching new arenas which can create highly functional, environment friendly and affordable products at the same time. Take a look at what we currently have in stock and get in touch to learn more and place orders.]]></string>
    <string name="logic_second"><![CDATA[This is a revolutionary quality benchmark product by logic brothers&company in the Indian markets. this product is made through research & development with great efforts by our engineers to conserve water and electricity for our prime consumers with automation including wireless & sensorless technology. seems it is a fully wireless system with software control and computer tuning technology without any sensors, batteries, and wires in your overhead water tank which makes it a long-lasting life product with rust-free, maintenance-free, and almost electric shock-free.]]></string>
    <string name="logic_stsmt"><![CDATA[LOGIC BROTHERS & COMPANY was started by two youth brothers Parth and Harshvardhan in the year 2018 to make a change in technology and to give the best output of technology and problem-solving vision for customers with aim of not to compete but to commit for quality assurance for the long life product range of products to meet the customer need. From initial design to final quality assurance processes, we make sure our goods are reliable and exceptional. We’re proud to be one of the best-known names in the liquid level industry in the world. Get in touch to see how you can benefit from our products.]]></string>
    <string name="logic_fourth"><![CDATA[The leading product from the house of Logic is the sensorless Liquid level controller known as BITMAN invented by the company. The product has been awarded the worldwide patent for being the first of its kind. The controller is maintenance-free, easy to assemble, and User friendly can be installed in varied places requiring liquid level control like house water tanks, fuel tanks, milk tanks, soft drinks & chemical industries for liquid storage units. It is specially designed to prevent wastage of liquid by overflowing and to automatically monitor liquid level without the requirement of any external observation. We aspire to make this unique product available to serve different scales and purposes from houses to giant factories. Get in touch to know more about how our products can benefit you.]]></string>
    <string name="logic_fifth"><![CDATA[We’re proud to say that we’ve been recognized for our hard work in the fields of innovation, energy, and general engineering. This section highlights the certificates we’ve obtained as well as the awards we’ve earned for the great quality of our work and results. Check them out & Download the Product Brochure above.]]></string>
    <string name="logic_brotherscompany"><![CDATA[LOGIC BROTHERS & COMPANY]]></string>
    <string name="may_i_help_you">May\' I Help You"</string>
</resources>